--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.13,<4.0"
 dependencies = [
     "flet (>=0.27.6,<0.28.0)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
-    "loguru (>=0.7.3,<0.8.0)"
+    "loguru (>=0.7.3,<0.8.0)",
+    "sqlalchemy (>=2.0.40,<3.0.0)"
 ]
 
 
